--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,11 @@
      --white: #FFF; /*color section1*/
      --cloud: #F4F4FD; /*color section3*/
      --ocean: #404BBF; /*color  menu hover focus*/
-     --slate: #434455; /*color text address*/
 
 }
 
-/* Body style */
+
+/* main parameters for wrapper */
 .container {
     font-family: Roboto, sans-serif;
     font-size: 16px;
@@ -23,13 +23,10 @@
     color: var(--slate);
 }
 
-ul {
-    list-style-type: none;
-}
 
+/* --HEADER-- */
 a:link {
-    text-decoration: none;
-}
+    text-decoration: none;}
 
 .logo {
     color: var(--iris);
@@ -40,75 +37,51 @@ a:link {
     letter-spacing: 0.54px;
     text-transform: uppercase;
 }
+
 .logo-half2 {
     color: var(--navyblue);
 }
-
-.logo-footer {
-    color: var(--iris);
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17; /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
+ul {
+    list-style-type: none;
 }
 
-.logo-halftoot{
-    color: var(--cloud);
-}
-
-.nav-menu:link {
+a.nav-menu {
     color: var(--navyblue);
     font-weight: 500;
 }
 
-.nav-menu:hover, .nav-menu:focus {
+a.nav-menu:hover, a.nav-menu:focus {
     color: var(--ocean); 
 }
 
-.nav-address:link {
-    color: var(--slate);
+.address_data {
     font-style: normal;
+}
+
+.nav-address {
+    color: var(--slate);
 }
 
 .nav-address:hover, .nav-address:focus {
     color: var(--ocean);
 }
 
+
+/* --SECTION 1-- */
+.section-main {
+    background: var(--navyblue);
+}
+
+/* Header h1 */
 .title-main {
     background: var(--navyblue);
     color: var(--white);
     text-align: center;
-    /* Header 1 */
     font-family: Roboto;
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07; /* 107.143% */
     letter-spacing: 1.12px;
-}
-
-.title-subtitle {
-    color: var(--navyblue);
-    text-align: center;
-    /* Header 2 */
-    font-family: Roboto;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11; /* 111.111% */
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-.title {
-    color: var(--navyblue);
-    text-align: center;
-    /* Header 3 */
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2; /* 120% */
-    letter-spacing: 0.4px;
 }
 
 .button {
@@ -125,23 +98,62 @@ a:link {
     background-color: var(--ocean);
 }
 
-.section-main {
-    background: var(--navyblue);
+
+/* --SECTION 2-- */
+/* Header h2 */
+.title-subtitle {
+    color: var(--navyblue);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11; /* 111.111% */
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
 }
+
+/* Header h3 */
+.title {
+    color: var(--navyblue);
+    /* Header 3 */
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2; /* 120% */
+    letter-spacing: 0.4px;
+}
+
 /* для чого дублювати характеристики які наслідуються з основного контейнеру? */
 .main-text {
     color: inherit;
     font-size: 16px;
 }
 
+/* --SECTION 3-- */
 .section-our_team {
     background: var(--cloud);
 }
 
 .image {background-color: #FFFFFF;}
 
+
+/* --FOOTER-- */
 .footer {
     background-color: var(--navyblue);
+}
+
+.logo-footer {
+    color: var(--iris);
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17; /* 116.667% */
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+}
+
+.logo-halftoot{
+    color: var(--cloud);
 }
 
 .footer-text {
